# subtitles_generator

./: .gitignore  Makefile  README.md  pyproject.toml
src/subtitles_generator/: folder_manipulation.py  gui.py  main.py  thread.py  whisper_functions.py
src/subtitles_generator/manipulation/: folder_manipulation.py  subtitles_manipulation.py
