[project]
name = "subtitles-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=1.26,<2.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "typer (>=0.16.0,<0.17.0)"
]

[tool.poetry]
packages = [{include = "subtitles_generator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
